--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,5 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <div id="modal"></div>
+    <!-- Teleport location-->
   </body>
 </html>
