--- a/client-vite/index.html
+++ b/client-vite/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="https://embedding.tableauusercontent.com/tableau.embedding.3.3.0.min.js"></script>
+    <!-- <script type="module" src="https://embedding.tableauusercontent.com/tableau.embedding.3.3.0.min.js"></script> -->
     <title>CCC Dashboard</title>
   </head>
   <body>
